# cppGameMaking

./: ._.git  ._.gitignore  ._Battleship  ._Hangman  ._NumberGuesser  ._TextInvaders  .gitignore  README.md
Battleship/: ._.vscode  ._build  ._include  ._lib  ._test  CMakeLists.txt  Makefile
Battleship/src/: ._Boards  ._Players  ._Utils  CMakeLists.txt  Parts.hpp  main.cpp
Battleship/src/Boards/: ._Boards.hpp  Boards.cpp  Boards.hpp
Battleship/src/Players/: ._Players.hpp  Players.cpp  Players.hpp
Battleship/src/Ships/: ._Ships.cpp  ._Ships.hpp  Ships.cpp  Ships.hpp
Battleship/src/Utils/: ._Utils.cpp  Utils.cpp  Utils.hpp
Battleship/test/: ._CMakeLists.txt  CMakeLists.txt  DemoTests.cpp
Hangman/: ._.vscode  ._bin  ._include  ._lib  ._src  Makefile  README.md
Hangman/include/: ._Utils.hpp  Utils.hpp
Hangman/src/: ._main.cpp  Utils.cpp  main.cpp
NumberGuesser/: ._.vscode  ._Makefile  ._README.md  ._bin  ._include  ._lib  ._src  .gitignore  Makefile  README.md
NumberGuesser/src/: ._main.cpp  main.cpp
TextInvaders/: ._build  ._lib  ._src  ._test  CMakeLists.txt
TextInvaders/src/: ._CMakeLists.txt  ._CursesUtils.cpp  ._CursesUtils.hpp  ._main.cpp  CMakeLists.txt  CursesUtils.cpp  CursesUtils.hpp  TextInvaders.hpp  main.cpp
TextInvaders/test/: ._CMakeLists.txt  CMakeLists.txt  DemoTests.cpp
